--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,4 @@
-table, td{
+/* table, td{
     border: 0.3rem #872341 solid;
     text-align: center;
     border-collapse: collapse;
@@ -19,4 +19,10 @@ button{
 
 button:hover, button:focus{
     background-color: #F05941;
+} */
+
+html, section, main{
+    background-color: rgb(34, 9, 44);
+    background:radial-gradient(circle, rgba(4, 9, 44,1) 0%, rgba(51, 19, 28, 1) 100%);
+    color: whitesmoke;
 }
