--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,6 +6,10 @@ main {
     color: whitesmoke;
 }
 
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 .table-light tbody tr:nth-of-type(odd) {
-    background-color: rgba(255, 255, 255, 0.05); 
+    background-color: rgba(255, 255, 255, 0.05);
 }
