--- a/Css/login.css
+++ b/Css/login.css
@@ -37,6 +37,15 @@ body {
     background: radial-gradient(circle, rgba(34, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
 }
 
+@media (max-width: 768px) {
+    .containerImagen {
+        display: none;
+    }
+    .containerMadre {
+        flex-direction: column;
+    }
+}
+
 #containerLogin {
     color: rgb(255, 255, 255);
 }
