--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;900&display=swap');
 main {
     display: flex;
     justify-content: center;
@@ -5,6 +6,7 @@ main {
     flex-direction: column;
     height: 150vh;
     width: 100%;
+    
 }
 
 .containerMadre {
