--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Outfit', sans-serif;
+    color: white;
 }
-.portada{
-    height: 30vw;
+#peliculaDestacada{
+    background-color: red;
+    font-weight: 100;
+    height: 35vw;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+#nombrePeliculaDestacada{
+    font-size: 4vw;
+    font-weight: 900;
+}
+.datosPeliculaDestacada{
+    font-size: 1.3vw;
+    width: 40%;
+}
+#reproducirPeliculaDestacada{
+    font-size: 1vw;
+    width: 30%;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .categoria{
     background-color: #22092C;
 }
 a{
     position: relative;
+}
+.carouselControl{
+    width: auto!important;
+    background-color: rgba(80, 39, 58, 0.089)!important;
+    border-radius: .25em;
+}
+.carousel-item{
+    padding: 1em;
+}
+.col img{
+    border-radius: .25em;
+    height: 100%;
+}
+.col img:hover{
+    scale : 120%;
+}
+.card{
+    border: none!important;
+}
+.card-body{
+    display: none;
+}
+
+@media (width <= 768px) {
+    #peliculaDestacada{
+        height: 50vw;
+    }
+    #reproducirPeliculaDestacada{
+        font-size: 2vw;
+        width: 50%;
+        white-space: nowrap;
+        overflow: auto;
+    }
+    .fa-lg{
+        font-size: 5vw;
+    }
+}
+
+@media (768px < width <= 992px) {
+    .fa-lg{
+        font-size: 3vw;
+    }
 }
