--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,10 @@
 html,
 section,
 main {
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-color: rgb(34, 9, 44);
     background: radial-gradient(circle, rgba(4, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
     color: whitesmoke;
@@ -63,4 +67,39 @@ h3{
 #btnUsuarios.active, #btnUsuarios:active, .show>#btnUsuarios.dropdown-toggle {
     background-color: #f05941 !important;
     border-color: #f05941 !important;
+}
+
+.btn-custom {
+    background-color: #d9412c;
+    color: whitesmoke;
+}
+
+.btn-custom:hover {
+    background-color: #e54c33; 
+    border-color: #e54c33;
+    color: var(white);
+}
+
+.btn-custom:focus {
+    box-shadow: 0 0 0 0.25rem rgba(240, 89, 65, 0.25);
+}
+
+.btn-custom:active {
+    background-color: #d9412c; /* 20% más oscuro */
+    border-color: #d9412c; /* 20% más oscuro */
+    color: var(white);
+}
+
+#contenedorTituloBotones {
+    margin: 2.1rem 0.5rem 1.1rem 0.5rem;
+}
+
+#contenedorTituloBotones #btnPeliculas.active,
+#contenedorTituloBotones #btnUsuarios.active,
+#contenedorTituloBotones #btnPeliculas:active,
+#contenedorTituloBotones #btnUsuarios:active,
+#contenedorTituloBotones .show>#btnPeliculas.dropdown-toggle,
+#contenedorTituloBotones .show>#btnUsuarios.dropdown-toggle {
+    background-color: #d9412c !important;
+    border-color: #d9412c !important;
 }
