--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,14 @@ body{
     justify-content: flex-end;
     align-items: center;
     height: 85px;
-    padding: 5px 10%;
+    padding: 4px 10%;
+
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	transition: 0.7s;
+	z-index: 10;
 }
 
 .header .logo{
@@ -50,7 +57,7 @@ body{
 }
 
 .header .nav-links a{
-    font-size: 700;
+    font-size: 600;
     color: #eceff1;
     text-decoration: none;  
 }
@@ -77,6 +84,74 @@ body{
     transform: scale(1.1);
 }
 
+/*nav bar fijo*/
+header{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	transition: 0.7s;
+	padding: 30px 20px;
+	z-index: 10;
+}
+header.abajo{
+	background: #fff;
+	padding: 15px 20px;
+}
+header .logo{
+	position: relative;
+	color: #fff;
+	font-weight: bold;
+	font-size: 2em;
+	letter-spacing: 2px;
+	transition: 1.5s;
+	text-decoration: none;
+}
+nav{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+header ul{
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+header ul li{
+	list-style: none;
+}
+
+header ul li a{
+	position: relative;
+	font-family: helvetica;
+	margin: 0 15px;
+	text-decoration: none;
+	color: #fff;
+	letter-spacing: 2px;
+	font-weight: 600;
+	transition: 0.7s;
+}
+
+.zona1{
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	background: url(https://mangatschool.com/wp-content/uploads/2021/03/curso-fundamentos-de-programacion-algoritmos.jpg);
+	background-size: cover;
+	background-position: center center;
+}
+header.abajo .logo,
+header.abajo ul li a{
+	color: #000000;
+}
+
+
+/*fin*/
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 body{
