--- a/css/index.css
+++ b/css/index.css
@@ -7,21 +7,24 @@
     font-family: 'Outfit', sans-serif;
     color: white;
 }
+.tituloCategoria{
+    font-size: 3vw!important;
+}
 #peliculaDestacada{
-    background-color: red;
     font-weight: 100;
     height: 35vw;
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    /* background-position: center; */
+    background-size: 100vw 45vw;
 }
 #nombrePeliculaDestacada{
+    color: #BE3144;
     font-size: 4vw;
     font-weight: 900;
 }
 .datosPeliculaDestacada{
     font-size: 1.3vw;
-    width: 40%;
+    width: 50%;
 }
 #reproducirPeliculaDestacada{
     font-size: 1vw;
@@ -70,10 +73,27 @@ a{
     .fa-lg{
         font-size: 5vw;
     }
+    #peliculaDestacada{
+        background-size: cover
+    }
+    .tituloCategoria{
+        font-size: 7vw!important;
+    }
 }
 
 @media (768px < width <= 992px) {
     .fa-lg{
         font-size: 3vw;
     }
+    .tituloCategoria{
+        font-size: 5vw!important;
+    }
+}
+
+#imagenPeliDestacada{
+    max-height: 100%!important;
+    filter: opacity(100%);
+    position: absolute;
+    top: 0;
+    max-height: 50%;
 }
