--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,14 +18,15 @@ body {
     background-color: rgba(255, 255, 255, 0.05);
 }
 
-h3{
+h3 {
     border-bottom: 0.3rem solid whitesmoke;
 }
 
 .carousel-inner img {
     width: 800px;
     height: 400px;
-    object-fit: cover; /* Esto evita que las imágenes se deformen */
+    object-fit: cover;
+    /* Esto evita que las imágenes se deformen */
 }
 
 .team-member {
@@ -36,12 +37,13 @@ h3{
     justify-content: center;
     height: 100%;
 }
+
 .team-member img {
     max-width: 100%;
     max-height: 100%;
-    width: 150px; 
-    height: 150px; 
-    border-radius: 50%; 
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
 }
 
 .hidden {
@@ -59,12 +61,16 @@ h3{
     border-color: #872341;
 }
 
-#btnPeliculas.active, #btnPeliculas:active, .show>#btnPeliculas.dropdown-toggle {
+#btnPeliculas.active,
+#btnPeliculas:active,
+.show>#btnPeliculas.dropdown-toggle {
     background-color: #f05941 !important;
     border-color: #f05941 !important;
 }
 
-#btnUsuarios.active, #btnUsuarios:active, .show>#btnUsuarios.dropdown-toggle {
+#btnUsuarios.active,
+#btnUsuarios:active,
+.show>#btnUsuarios.dropdown-toggle {
     background-color: #f05941 !important;
     border-color: #f05941 !important;
 }
@@ -75,7 +81,7 @@ h3{
 }
 
 .btn-custom:hover {
-    background-color: #e54c33; 
+    background-color: #e54c33;
     border-color: #e54c33;
     color: var(white);
 }
@@ -85,8 +91,10 @@ h3{
 }
 
 .btn-custom:active {
-    background-color: #d9412c; /* 20% más oscuro */
-    border-color: #d9412c; /* 20% más oscuro */
+    background-color: #d9412c;
+    /* 20% más oscuro */
+    border-color: #d9412c;
+    /* 20% más oscuro */
     color: var(white);
 }
 
@@ -103,3 +111,4 @@ h3{
     background-color: #d9412c !important;
     border-color: #d9412c !important;
 }
+
