--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,7 @@ main {
     background-color: rgb(34, 9, 44);
     background: radial-gradient(circle, rgba(4, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
     color: whitesmoke;
+    text-decoration: none;
 }
 
 body {
@@ -21,6 +22,7 @@ body {
 h3 {
     border-bottom: 0.3rem solid whitesmoke;
 }
+
 
 .carousel-inner img {
     width: 800px;
@@ -112,3 +114,10 @@ h3 {
     border-color: #d9412c !important;
 }
 
+.custom-font-size {
+    font-size: 0.9rem; 
+}
+
+.btn-custom:hover {
+    color: black;
+}
