--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Outfit', sans-serif;
-    color: white;
-}
 html,
 section,
 main {
@@ -15,80 +8,90 @@ main {
     background-color: rgb(34, 9, 44);
     background: radial-gradient(circle, rgba(4, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
     color: whitesmoke;
+    text-decoration: none;
 }
-
 body {
     font-family: 'Montserrat', sans-serif;
 }
-.tituloCategoria{
-    font-size: 3vw!important;
+
+.btn-custom {
+    background-color: #d9412c;
+    color: whitesmoke;
+}
+
+.btn-custom:hover {
+    background-color: #e54c33;
+    border-color: #e54c33;
+    color: var(white);
+}
+
+.btn-custom:focus {
+    box-shadow: 0 0 0 0.25rem rgba(240, 89, 65, 0.25);
+}
+
+.btn-custom:active {
+    background-color: #d9412c;
+    /* 20% más oscuro */
+    border-color: #d9412c;
+    /* 20% más oscuro */
+    color: var(white);
+}
+
+.custom-font-size {
+    font-size: 0.9rem; 
+}
+
+.btn-custom:hover {
+    color: black;
 }
 
 a{
     position: relative;
 }
-.carouselControl{
-    width: auto!important;
-    background-color: rgba(80, 39, 58, 0.089)!important;
+.carouselControl {
+    width: auto !important;
+    /* background-color: rgba(80, 39, 58, 0.089)!important; */
     border-radius: .25em;
 }
-.carousel-item{
+
+.carousel-item {
     padding: 1em;
 }
-.col img{
+
+.col img {
     border-radius: .25em;
     height: 100%;
+    transition: all 0.3s;
 }
-.col img:hover{
-    scale : 120%;
+
+.col img:hover {
+    scale: 120%;
 }
-.card{
-    border: none!important;
+
+.card {
+    border: none !important;
 }
-.card-body{
+
+.card-body {
     display: none;
 }
 
-@media (width <= 768px) {
-    #peliculaDestacada{
-        height: 50vw;
-    }
-    #reproducirPeliculaDestacada{
-        font-size: 2vw;
-        width: 50%;
-        white-space: nowrap;
-        overflow: auto;
-    }
-    .fa-lg{
+.fa-lg:hover {
+    scale: 1.2;
+}
+
+@media (width <=768px) {
+
+    .fa-lg {
         font-size: 5vw;
     }
-    #peliculaDestacada{
-        background-size: cover
-    }
-    .tituloCategoria{
-        font-size: 7vw!important;
-    }
+
+
 }
 
-@media (768px < width <= 992px) {
-    .fa-lg{
+@media (768px < width <=992px) {
+    .fa-lg {
         font-size: 3vw;
     }
-    .tituloCategoria{
-        font-size: 5vw!important;
-    }
-}
 
-#imgDetalle {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    filter: grayscale(20%); /* Ajusta el porcentaje según tus preferencias */
-}
-
-/* Media query para dispositivos móviles */
-@media (max-width: 380px) {
-    .card-text {
-        font-size: 12px; /* Ajusta el tamaño de la fuente según tus preferencias */
-    }
 }
