--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;900&display=swap');
 main {
     display: flex;
     justify-content: center;
@@ -6,18 +5,29 @@ main {
     flex-direction: column;
     height: 150vh;
     width: 100%;
-    
 }
 
 .containerMadre {
-    margin: 6.5rem;
+    margin: 7rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: row;
     border: 1px solid rgba(255, 255, 255, 0.5);
-    box-shadow: 0 0 12px rgba(255, 255, 255, 0.5);
-    border-radius: 50px;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+    border-radius: 10px;
+}
+
+
+.textoLogin {
+    font-size: 3vw;
+    transition: font-size 0.5s;
+}
+
+@media (max-width: 768px) {
+    .textoLogin {
+        font-size: 6vw;
+    }
 }
 
 .containerImagen {
@@ -39,6 +49,15 @@ body {
     background: radial-gradient(circle, rgba(34, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
 }
 
+@media (max-width: 768px) {
+    .containerImagen {
+        display: none;
+    }
+    .containerMadre {
+        flex-direction: column;
+    }
+}
+
 #containerLogin {
     color: rgb(255, 255, 255);
 }
@@ -46,7 +65,7 @@ body {
     display: flex;
     justify-content: end;
     align-items: end;
-    height: 200px;
+    height: 300px;
     width: 100%;
     padding: 10px;
 }
@@ -56,7 +75,8 @@ body {
     align-items: center;
     flex-direction: column;
 }
-.botonLogeo {
+
+#botonLogeo {
     display: flex;
     justify-content: center;
     align-items: center;
