--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@
     height: 35vw;
     background-repeat: no-repeat;
     /* background-position: center; */
-    background-size: 100vw 45vw;
+    background-size: 100vw 55vw;
 }
 #nombrePeliculaDestacada{
     color: #BE3144;
@@ -33,7 +33,8 @@
     overflow: hidden;
 }
 .categoria{
-    background: radial-gradient(ellipse, rgba(4, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
+    background-color: rgb(34, 9, 44);
+    background: radial-gradient(circle, rgba(4, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
 }
 a{
     position: relative;
@@ -46,13 +47,16 @@ a{
 .carousel-item{
     padding: 1em;
 }
+/* .col{
+    padding: 10px!important;
+} */
 .col img{
     border-radius: .25em;
     height: 100%;
     transition: all 0.3s;
 }
 .col img:hover{
-    scale : 120%;
+    scale : 110%;
 }
 .card{
     border: none!important;
@@ -63,11 +67,12 @@ a{
 .fa-lg:hover{
     scale: 1.2;
 }
-/* #imgpel{
-    position: absolute;
-    top: 0;
-    width: 40vw;
-} */
+#logoDestacado{
+    margin-left: 10%;
+    position: relative;
+    /* top: 5%; */
+    width: 20vw;
+}
 @media (width <= 768px) {
     #peliculaDestacada{
         height: 50vw;
@@ -87,9 +92,15 @@ a{
     .tituloCategoria{
         font-size: 7vw!important;
     }
+    .col img:hover{
+        scale : 105%;
+    }
 }
 
 @media (768px < width <= 992px) {
+    .col img:hover{
+        scale : 105%;
+    }
     .fa-lg{
         font-size: 3vw;
     }
