--- a/Css/login.css
+++ b/Css/login.css
@@ -75,7 +75,7 @@ body {
     align-items: center;
     flex-direction: column;
 }
-.botonLogeo {
+#botonLogeo {
     display: flex;
     justify-content: center;
     align-items: center;
