--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;900&display=swap');
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Outfit', sans-serif;
-    font-size: 20px;
-}
-
-body{
-    background-color: #AE445A;
-}
-
-h1, h2{
-    font-weight: 900;
-}
-
-html, section, main{
-    background-color: rgb(34, 9, 44);
-    background:radial-gradient(circle, rgba(4, 9, 44,1) 0%, rgba(51, 19, 28, 1) 100%);
-    background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: whitesmoke;
-    
-}
-
-.btn{
-    background-color: #BE3144;
-    color: whitesmoke;
-}
-
-
-@media (max-width: 840px) {
-    #imgCategoria{
-        width: 360px;
-    }
-}
-
-
-.header{
+#header{
     background-color: #872341;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
     height: 85px;
     padding: 4px 10%;
@@ -57,114 +13,31 @@ html, section, main{
 	z-index: 10;
 }
 
-.header .logo{
-    cursor: pointer;
-    margin-right: auto;
-}
-
-.header .logo img{
+#header img{
     height: 70px;
     width: auto;
     transition: all 0.3s;
 }
 
-.header .logo img:hover{
+#header img:hover{
     transform: scale(1.2);
 }
 
-.header .nav-links{
-    list-style: none;
-}
-
-.header .nav-links li{
-    display: inline-block;
-    padding: 0 20px;   
-}
-
-.header .nav-links li:hover{
-    transform: scale(1.1);
-}
-
-.header .nav-links a{
+#header a{
     font-size: 600;
-    color: #eceff1;
-    text-decoration: none;  
+    color: #eceff1; 
 }
 
-.header .nav-links li a:hover{
-    color: #ffbc0e;
+.dropdown button{
+	background-color: #BE3144;
+	color: white;
 }
 
-.header .btn button{
-    margin-left: 20px;
-    font-weight: 700;
-    color: #1b3039;
-    padding: 9px 25px;
-    background: #eceff1;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
+#btnBuscar{
+	background-color: #BE3144;
+	color: white;
 }
 
-.header .btn button:hover{
-    background-color: #e2f1f8;
-    color: #ffbc0e;
-    transform: scale(1.1);
-}
-
-/*nav bar fijo*/
-header{
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	display: flex;
-	justify-content: space-around;
-	transition: 0.7s;
-	padding: 30px 20px;
-	z-index: 10;
-}
-header.abajo{
-	background: #fff;
-	padding: 15px 20px;
-}
-header .logo{
-	position: relative;
-	color: #fff;
-	font-weight: bold;
-	font-size: 2em;
-	letter-spacing: 2px;
-	transition: 1.5s;
-	text-decoration: none;
-}
-nav{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-header ul{
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-header ul li{
-	list-style: none;
-}
-
-header ul li a{
-	position: relative;
-	font-family: helvetica;
-	margin: 0 15px;
-	text-decoration: none;
-	color: #fff;
-	letter-spacing: 2px;
-	font-weight: 600;
-	transition: 0.7s;
-}
 
 .zona1{
 	position: relative;
