--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;900&display=swap');
+*{
+    font-family: 'Outfit', sans-serif;;
+}
 html,
 section,
 main {
@@ -19,9 +23,9 @@ body {
     background-color: rgba(255, 255, 255, 0.05);
 }
 
-h3 {
+/* h3 {
     border-bottom: 0.3rem solid whitesmoke;
-}
+} */
 
 
 .carousel-inner img {
@@ -121,3 +125,16 @@ h3 {
 .btn-custom:hover {
     color: black;
 }
+
+#imgCategoria{
+    max-width: 400px;
+  height: auto;
+}
+
+@media (max-width: 840px) {
+    #imgCategoria{
+        width: 360px;
+    }
+}
+
+
