arreglada la pagina nosotros

--- a/css/Nosotros.css
+++ b/css/Nosotros.css
@@ -5,9 +5,10 @@ body{
 }
 
 .carousel-inner img {
-    width: 800px;
     height: 400px;
     object-fit: cover; 
+    object-position: center;
+    
 }
 
 .team-member {
