--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,12 @@
+body {
+    font-family: 'Croissant One', serif;
+    font-family: 'Outfit', sans-serif;
+    background: rgb(34, 9, 44);
+    background: radial-gradient(circle, rgba(34, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
+}
+
 .containerMadre {
-    margin: 2rem;
+    margin: 2em;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -26,6 +33,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    max-height: 480px;
+    margin-top: 8px;
 }
 
 .logoP {
@@ -33,12 +42,6 @@
   height: auto;
 }
 
-body {
-    font-family: 'Croissant One', serif;
-    font-family: 'Outfit', sans-serif;
-    background: rgb(34, 9, 44);
-    background: radial-gradient(circle, rgba(34, 9, 44, 1) 0%, rgba(51, 19, 28, 1) 100%);
-}
 
 @media (max-width: 768px) {
     .containerImagen {
