fixed recuperar contraseña

--- a/css/recupero.css
+++ b/css/recupero.css
@@ -37,3 +37,10 @@ body {
     max-width: 200px;
     margin: auto;
 }
+button {
+    padding: 13px 30px;
+    border-radius: 15px;
+    border: none;
+    background: #f6e2e2;
+    color:#872341
+  }
